k8s/api_deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-test-api-deployment
  namespace: docker-test
  labels:
    app: docker-test-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: docker-test-api
  template: #pods
    metadata:
      name: docker-test-api-pod
      labels:
        app: docker-test-api
    spec:
      containers:
      - name: docker-test
        # image: registry.digitalocean.com/ghb/docker-test
        # imagePullPolicy: IfNotPresent
        image: supachai19998/docker-test:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
